chore:  update commit again123

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,8 +7,7 @@
   "license": "ISC",
   "main": "lib/components.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
@@ -21,5 +20,6 @@
   },
   "dependencies": {
     "@demo/core": "^0.0.3"
-  }
+  },
+  "gitHead": "f835eccb1eb8fa915ff47985ffa491f6aa30800b"
 }
