--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "useWorkspaces": true,
   "client": "yarn",
-  "version": "0.0.6",
+  "version": "independent",
   "publishConfig": {
     "registry": "http://43.138.232.95:4873/"
   }
