--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@vueuse/core": "^9.12.0",
     "lodash-es": "^4.17.21",
     "vue": "^3.2.47"
+  },
+  "scripts": {
+    "publish": "lerna run build && lerna publish"
   }
 }
