--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lerna": "^6.5.1",
     "typescript": "^4.9.5"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
     "lodash-es": "^4.17.21",
