chore:  update commit again0809999

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,5 +18,8 @@
   "scripts": {
     "build": "tsc"
   },
-  "gitHead": "627a7f51d8e27de716457d06d3b3fc2bc0f48fae"
+  "gitHead": "2bdab96f381ad640fa583fb2ae96d4453cee902f",
+  "devDependencies": {
+    "rollup": "^3.15.0"
+  }
 }
